@@ -19,7 +19,7 @@
  cocos2d helper macros
  */
 
-#ifdef DEBUG
+#ifdef COCOS2D_DEBUG
 //#define CCLOG(s, …) NSLog((@”%s %s:%d ” s), __func__, basename(__FILE__), __LINE__, ## __VA_ARGS__);
 #define CCLOG(...) NSLog(__VA_ARGS__)
 #else
